--- a/presentation.tex
+++ b/presentation.tex
@@ -16,20 +16,20 @@
     
 \usepackage{array}
 \newcolumntype{x}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}p{#1}}
-\usepackage{booktabs}
+\usepackage{booktabs, colortbl}
     
 \usepackage{siunitx}
 \usepackage{mathrsfs, amsmath}
     
 \usepackage{graphicx}
-\usepackage[font={small, color=IGNDarkGrey}, labelformat=empty]{caption}
+\usepackage[font={small, color=IGNDarkGreen}, labelformat=empty]{caption}
 \usepackage{subcaption}
 \DeclareCaptionFont{tiny}{\tiny}
 % \captionsetup[subtable]{labelfont={tiny, bf},textfont=normalfont,justification=raggedright}
 \captionsetup[subfigure]{labelfont={tiny, bf},textfont=tiny,justification=raggedright}
 \usepackage{adjustbox}
 
-\usepackage{pifont}
+\usepackage{pifont, textcomp}
 \newcommand{\cmark}{{\color{green} \ding{51}}}%
 \newcommand{\xmark}{{\color{red} \ding{55}}}%
     
@@ -252,49 +252,107 @@
         \end{frame}
 
     \section{Experiments}
-        \begin{frame}{Results using all features}
+        \begin{frame}{Used Dataset}
             \begin{table}
                 \begin{center}
                     \scriptsize
-                    \begin{tabular}{c c c c}
+                    \begin{tabular}{c x{2cm} x{2cm} x{2cm}}
                         \toprule
-                        & Elancourt & Nantes & Paris 13 \\
+                        & Elancourt & Nantes & Paris-13 \\
                         \midrule
+                        Algorithm & Bati3D & Bati3D & Bati3D \\
                         \# samples & 2009 & 748 & 478 \\
+                        Scene & residential + industrial & dense downtown & Haussmann style + High towers \\
+                        \acrshort{acr::dsm} resolution & \SI{0.06}{\m} & \SI{0.1}{\m} & \SI{0.1}{\m} \\
+                        Orthoimage resolution & \SI{0.06}{\m} & \SI{0.1}{\m} & \SI{0.1}{\m} \\
                         \bottomrule
                     \end{tabular}
-                    \caption{\scriptsize Dataset statistics}
-                    \uncover<2->{
-                        \begin{tabular}{|x{1cm} | x{1.3cm} x{1.3cm} | x{1.2cm} x{1.2cm} | x{1.2cm} x{1.2cm}|}
-                            \hline
-                            & \multicolumn{2}{x{3cm}|}{\textbf{Elancourt (10-cross val.)}} & \multicolumn{2}{x{2.4cm}|}{\textbf{Elancourt $\rightarrow$ Nantes}} & \multicolumn{2}{x{2.5cm}|}{\textbf{Elancourt $\rightarrow$ Paris 13}}\\
-                            \cline{2-7}
-                            &\textbf{Recall} & \textbf{Prec.} & \textbf{Recall} & \textbf{Prec.} & \textbf{Recall} & \textbf{Prec.} \\
-                            \hline
-                            \textit{BOS} & 90.83 & 76.14 & \textcolor{IGNDarkGreen}{93.12} & \textcolor{red}{42.61} & \textcolor{IGNDarkGreen}{96.53} & \textcolor{red}{43.82} \\
-                            \hline
-                            \textit{BUS} & 39.32 & 71.81 & \textcolor{red}{8.82} & 66.67 & \textcolor{red}{0} & \textcolor{red}{---} \\
-                            \hline
-                            \textit{BImB} & 16.75 & 68.0 & \textcolor{red}{2.02} & 33.33 & \textcolor{red}{0} & \textcolor{red}{---} \\
-                            \hline
-                            \textit{BInT} & 11.11 & 91.67 & 0.88 & 100 & 3.95 & 50.0 \\
-                            \hline
-                            \hline
-                            \textit{FOS} & 98.91 & 98.84 & \textcolor{IGNDarkGreen}{98.33} & \textcolor{IGNDarkGreen}{97.92} & \textcolor{IGNDarkGreen}{97.19} & \textcolor{IGNDarkGreen}{97.58} \\
-                            \hline
-                            \textit{FUS} & 1.27 & 66.67 & \textcolor{IGNDarkGreen}{13.81} & \textcolor{IGNDarkGreen}{63.04} & 8.36 & 95.83 \\
-                            \hline
-                            \textit{FImB} & 7.42 & 100 & \textcolor{IGNDarkGreen}{46.34} & 65.52 & 11.80 & 60.71 \\
-                            \hline
-                            \textit{FImT} & 3.33 & 100 & 9.09 & 100 & 0 & 0 \\
-                            \hline
-                            \textit{FIG} & 79.02 & 71.82 & \textcolor{IGNDarkGreen}{94.17} & 70.70 & \textcolor{IGNDarkGreen}{86.16} & \textcolor{IGNDarkGreen}{88.47} \\
-                            \hline
-                        \end{tabular}
-                        \caption{\scriptsize Test results using \textbf{Random Forest} ($max\ depth = 4$ \& $\# trees = 1000$) trained on Elancourt.}
-                    }
+                    \caption{Dataset details.}
                 \end{center}
             \end{table}
+            \uncover<2->{
+                \begin{table}
+                    \begin{center}
+                        \scriptsize
+                        \begin{tabular}{c c c}
+                            \toprule
+                            Geometric & Height based & Image based \\
+                            \midrule
+                            $\approx$ \SI{0.05}{\second}/building & $\approx$ \SI{1.4}{\second}/building & $>$ \SI{16}{\second}/building \\
+                            \bottomrule
+                        \end{tabular}
+                        \caption{Running time per feature type.}
+                    \end{center}
+                \end{table}
+            }
+        \end{frame}
+        \begin{frame}{Ablation study on Elancourt}
+            \begin{table}
+                \scriptsize
+                \begin{center}
+                    \begin{tabular}{|x{.75cm} | x{.75cm} x{.75cm} | x{.75cm} x{.75cm} | x{.75cm} x{.75cm} | x{.75cm} x{.75cm}|}
+                        \hline
+                        &\multicolumn{2}{x{1.5cm}|}{\textbf{Geometry}} & \multicolumn{2}{x{1.5cm}|}{\textbf{Geom. $\cup$ Height}} & \multicolumn{2}{x{1.5cm}|}{\textbf{Geom. $\cup$ Image}} & \multicolumn{2}{x{1.5cm}|}{\textbf{All}}\\
+                        \cline{2-9}
+                        &\textbf{Recall} & \textbf{Prec.} & \textbf{Recall} & \textbf{Prec.} & \textbf{Recall} & \textbf{Prec.} & \textbf{Recall} & \textbf{Prec.}\\
+                        \hline
+                        \textit{BOS} & \textbf{93.96} & 76.15 & 91.43 & \textbf{77.76} & 91.51 & 76.08 & 90.83 & 76.14 \\
+                        \hline
+                        \strut\\[-\normalbaselineskip]
+                        \only<2>{\\[-\normalbaselineskip]\rowcolor{green}}\textit{BUS} & 32.98 & \textbf{76.47} & \textbf{41.86} & 75.57 & 40.38 & 71.00 & 39.32 & 71.81 \\
+                        \hline
+                        \strut\\[-\normalbaselineskip]
+                        \only<2>{\\[-\normalbaselineskip]\rowcolor{green}}\textit{BImB} & 12.32 & 67.57 & 12.81 & \textbf{68.42} & 16.26 & 67.35 & \textbf{16.75} & 68.0 \\
+                        \hline
+                        \textit{BInT} & \textbf{25.25} & 92.59 & 20.20 & 90.91 & 20.20 & \textbf{95.24} & 11.11 & 91.67 \\
+                        \hline
+                        \hline
+                        \textit{FOS} & 98.91 & 99.07 & 98.91 & \textbf{99.30} & \textbf{98.99} & 98.84 & 98.91 & 98.84 \\
+                        \hline
+                        \textit{FUS} & \textbf{1.90} & 54.55 & 0.63 & \textbf{66.67} & 1.61 & 50 & 1.27 & \textbf{66.67} \\
+                        \hline
+                        \textit{FIB} & \textbf{9.17} & 87.5 & 0 & --- & 8.30 & 82.61 & 7.42 & \textbf{100} \\
+                        \hline
+                        \textit{FIT} & \textbf{6.67} & \textbf{100} & 8.73 & 95.24 & 3.33 & \textbf{100} & 3.33 & \textbf{100} \\
+                        \hline
+                        \textit{FIG} & \textbf{80.54} & 73.14 & 80.45 & \textbf{72.62} & 78.69 & 72.12 & 79.02 & 71.82 \\
+                        \hline
+                    \end{tabular}
+                \end{center}
+            \end{table}
+        \end{frame}
+        \begin{frame}{Transferability study}
+            \begin{table}
+                \begin{center}
+                    \scriptsize
+                    \begin{tabular}{|x{.75cm} | x{.75cm} x{.75cm} | x{.75cm} x{.75cm} || x{.75cm} x{.75cm}| x{.75cm} x{.75cm}|}
+                        \hline
+                        & \multicolumn{2}{x{1.5cm}|}{\textbf{Elancourt $\rightarrow$ Nantes}} & \multicolumn{2}{x{1.5cm}||}{\textbf{Elancourt $\rightarrow$ Paris-13}} & \multicolumn{2}{x{1.5cm}|}{\textbf{Nantes $\rightarrow$ Elancourt}} & \multicolumn{2}{x{1.5cm}|}{\textbf{Paris-13 $\rightarrow$ Elancourt}}\\
+                        \cline{2-9}
+                        &\textbf{Recall} & \textbf{Prec.} & \textbf{Recall} & \textbf{Prec.} & \textbf{Recall} & \textbf{Prec.} & \textbf{Recall} & \textbf{Prec.} \\
+                        \hline
+                        \textit{BOS} & \textcolor{IGNDarkGreen}{100} & \textcolor{red}{42.05} & \textcolor{red}{78.71} & \textcolor{red}{42.97} & \textcolor{orange}{86.47} & \textcolor{orange}{64.99} & \textcolor{orange}{82.14} & \textcolor{orange}{69.59} \\
+                        \hline
+                        \textit{BUS} & \textcolor{red}{19.12} & \textcolor{red}{54.17} & \textcolor{red}{4.76} & \textcolor{red}{27.27} & \textcolor{red}{23.75} & \textcolor{red}{57.47} & \textcolor{red}{25.0} & \textcolor{red}{50.49} \\
+                        \hline
+                        \textit{BImB} & \textcolor{red}{0} & \textcolor{red}{---} & \textcolor{red}{1.85} & \textcolor{red}{33.33} & \textcolor{IGNDarkGreen}{15.65} & \textcolor{red}{46.75} & \textcolor{IGNDarkGreen}{19.89} & \textcolor{red}{48.05} \\
+                        \hline
+                        \textit{BInT} & \textcolor{IGNDarkGreen}{40.71} & \textcolor{red}{14.24} & \textcolor{red}{0} & \textcolor{red}{---}  & \textcolor{red}{4.70} & 100 & \textcolor{red}{4.44} & 100 \\
+                        \hline
+                        \hline
+                        \textit{FOS} & \textcolor{IGNDarkGreen}{100} & \textcolor{red}{69.38} & \textcolor{IGNDarkGreen}{98.80} & \textcolor{orange}{96.47} & \textcolor{IGNDarkGreen}{98.76} & \textcolor{IGNDarkGreen}{98.92} & \textcolor{IGNDarkGreen}{99.06} & \textcolor{IGNDarkGreen}{97.14} \\
+                        \hline
+                        \textit{FUS} & \textcolor{IGNDarkGreen}{15.71} & \textcolor{orange}{56.90} & \textcolor{IGNDarkGreen}{20.73} & \textcolor{IGNDarkGreen}{91.94} & 1.68 & 77.78 & 3.53 & 89.47 \\
+                        \hline
+                        \textit{FIB} & \textcolor{IGNDarkGreen}{83.54} & \textcolor{red}{43.08} & \textcolor{IGNDarkGreen}{39.58} & \textcolor{red}{64.04} & \textcolor{IGNDarkGreen}{23.75} & 73.96 & \textcolor{IGNDarkGreen}{21.86} & 70.11 \\
+                        \hline
+                        \textit{FIT} & 9.09 & 33.33 & 0 & 0 & 3.57 & 100 & 4.34 & 33.33 \\
+                        \hline
+                        \textit{FIG} & \textcolor{IGNDarkGreen}{100} & \textcolor{orange}{64.45} & \textcolor{IGNDarkGreen}{90.86} & \textcolor{IGNDarkGreen}{86.14} & \textcolor{IGNDarkGreen}{86.35} & \textcolor{orange}{67.97} & \textcolor{IGNDarkGreen}{82.38} & \textcolor{IGNDarkGreen}{73.08} \\
+                        \hline
+                    \end{tabular}
+                \end{center}
+            \end{table}            
         \end{frame}
         \begin{frame}{Some failure cases on Elancourt}
             \begin{figure}
